...
  Scaffold(
      topBar = {
        TopAppBar(
            navigationActions,
            stringResource(R.string.card_screen_description)
                .format(selectedParking.optName ?: stringResource(R.string.default_parking_name)))
      },
      modifier = Modifier.testTag("ParkingDetailsScreen")) { padding ->
        LazyColumn(
            modifier =
...
                    .padding(padding)
                    .padding(32.dp)
                    .testTag("ParkingDetailsColumn")) {
              item {
                Row(
...
                        Modifier.fillMaxWidth()
                            .padding(vertical = 8.dp)
                            .testTag("TopInteractionRow"),
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.SpaceBetween) {
...
                      // Icons Row
                      Row(
                          modifier = Modifier.testTag("IconsRow"),
                          verticalAlignment = Alignment.CenterVertically,
                          horizontalArrangement = Arrangement.spacedBy(8.dp)) {
...
                                        }
                                        .rotate(45f)
                                        .testTag("PinIcon"))

                            // Favorite Icon
...
                                        .testTag(
                                            if (isFavorite) "RedFilledFavoriteIcon"
                                            else "BlackOutlinedFavoriteIcon"))
                          }
                    }
...
                        Modifier.fillMaxWidth()
                            .padding(vertical = 8.dp)
                            .testTag("AverageRatingRow"),
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.SpaceBetween) {
...
                                  textDecoration = TextDecoration.Underline),
                          color = MaterialTheme.colorScheme.primary,
                          testTag = "SeeAllReviewsText",
                          modifier =
                              Modifier.clickable {
...
                // Images
                Row(
                    modifier = Modifier.height(150.dp).fillMaxWidth().testTag("ImagesRow"),
                    horizontalArrangement = Arrangement.spacedBy(8.dp),
                    verticalAlignment = Alignment.CenterVertically) {
...
                                  .height(32.dp)
                                  .weight(1f)
                                  .testTag("addPhotoButton"))
                    }

...
                Column(
                    modifier =
                        Modifier.fillMaxWidth().padding(vertical = 32.dp).testTag("InfoColumn"),
                    verticalArrangement = Arrangement.spacedBy(16.dp)) {
                      Row(
                          modifier = Modifier.fillMaxWidth().testTag("RowCapacityRack"),
                          horizontalArrangement = Arrangement.SpaceBetween) {
                            Column(modifier = Modifier.weight(1f).testTag("CapacityColumn")) {
...

                      Row(
                          modifier = Modifier.fillMaxWidth().testTag("RowProtectionPrice"),
                          horizontalArrangement = Arrangement.SpaceBetween) {
                            Column(modifier = Modifier.weight(1f).testTag("ProtectionColumn")) {
...

                      Row(
                          modifier = Modifier.fillMaxWidth().testTag("RowSecurity"),
                          horizontalArrangement = Arrangement.SpaceBetween) {
                            Column(modifier = Modifier.weight(1f).testTag("SecurityColumn")) {
...

                Column(
                    modifier = Modifier.fillMaxWidth().testTag("ButtonsColumn"),
                    verticalArrangement = Arrangement.spacedBy(16.dp)) {
                      Button(
...
                          modifier = Modifier.fillMaxWidth(),
                          colorLevel = ColorLevel.PRIMARY,
                          testTag = "ShowInMapButton")

                      if (userViewModel.currentUser.collectAsState().value != null) {
...
