...
            Point.fromLngLat(
                chosenLocation.value.longitude.toDouble(),
                chosenLocation.value.latitude.toDouble()))
  }

  Scaffold(
      modifier = Modifier.testTag("SpotListScreen"),
      bottomBar = { BottomNavigationBar(navigationActions, selectedItem = Route.LIST) }) {
          innerPadding ->
        Column(modifier = Modifier.fillMaxSize().padding(innerPadding).padding(bottom = 16.dp)) {
          FilterPanel(
              parkingViewModel = parkingViewModel,
              displayHeader = true,
              addressViewModel,
              mapViewModel,
              permissionHandler,
              userViewModel,
              navigationActions)
          val listState = rememberLazyListState()
          LazyColumn(state = listState, modifier = Modifier.testTag("SpotListColumn")) {
            // Pinned parking spots if any (includes titles and dividers)
            if (pinnedParkings.isNotEmpty()) {
              item {
                Text(
                    text = stringResource(R.string.pinned_spots),
                    style = MaterialTheme.typography.titleMedium,
...
          icon = Icons.Default.PushPin,
          backgroundColor = if (isPinned) Color.Red.copy(alpha = 0.7f) else Color.LightGray,
          left = true,
          modifier =
              Modifier.fillMaxHeight()
                  .weight(1f)
                  .testTag(if (isPinned) "UnpinActionCard" else "PinActionCard"))

      // Right action: Add to favorites or already in favorites
      if (isFavorite) {
        ActionCard(
            text = stringResource(R.string.already_in_favorites),
            icon = Icons.Default.Favorite,
...
      } else {
        ActionCard(
            text = stringResource(R.string.add_to_favorites),
            icon = Icons.Default.Favorite,
            backgroundColor = Color.Red.copy(alpha = 0.5f),
            left = false,
            modifier = Modifier.fillMaxHeight().weight(1f).testTag("AddToFavoriteActionCard"))
      }
    }

    // Main card
    var offsetX by remember { mutableFloatStateOf(0f) }
    Card(
...
                }
                .clickable(
                    onClick = {
                      parkingViewModel.selectParking(parking)
                      navigationActions.navigateTo(Screen.PARKING_DETAILS)
                    })
                .testTag("SpotListItem"),
        shape = RectangleShape,
        colors =
            CardDefaults.cardColors(
                containerColor =
                    if (isPinned) MaterialTheme.colorScheme.surfaceBright
                    else MaterialTheme.colorScheme.surface)) {
          Row(
              modifier =
                  Modifier.fillMaxSize()
                      .padding(horizontal = 32.dp, vertical = 12.dp)
                      .testTag("SpotCardContent"),
              verticalAlignment = Alignment.Top,
              horizontalArrangement = Arrangement.SpaceBetween) {
                Column(
                    modifier =
                        Modifier.weight(1f) // Allowing this column to take available space
                            .padding(end = 16.dp),
                ) {
                  androidx.compose.material3.Text(
                      text = parking.optName ?: stringResource(R.string.default_parking_name),
                      style = MaterialTheme.typography.bodyLarge,
                      maxLines = 1, // Limit to one line
                      overflow = TextOverflow.Ellipsis, // Use ellipsis for overflow
                      modifier = Modifier.fillMaxWidth().testTag("ParkingName"),
                  )

                  Spacer(modifier = Modifier.height(8.dp))

                  if (parking.nbReviews > 0) {
                    ScoreStars(
...
                    Text(
                        text =
                            if (distance < 1)
                                stringResource(R.string.distance_m).format(distance * 1000)
                            else stringResource(R.string.distance_km).format(distance),
                        style = MaterialTheme.typography.bodySmall,
                        testTag = "ParkingDistance")
                  }

                  if (isPinned) {
                    Icon(
                        imageVector = Icons.Default.PushPin,
                        contentDescription = "PinnedParking",
...
