...
  val failSignInMsg = stringResource(R.string.sign_in_failed_toast)
  val successSignInMsg = stringResource(R.string.sign_in_successful_toast)
  val accountNotFoundToast = stringResource(R.string.sign_in_account_not_found)

  // The main container for the screen
  // A surface container using the 'background' color from the theme
  Scaffold(modifier = Modifier.fillMaxSize().testTag("LoginScreen")) { padding ->
    Column(
        modifier = Modifier.fillMaxSize().padding(padding),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center,
    ) {
      Spacer(modifier = Modifier.weight(1f))
      // Welcome Text
      Text(
          text = stringResource(R.string.sign_in_welcome),
          style =
              MaterialTheme.typography.headlineLarge.copy(
                  fontWeight = FontWeight.SemiBold, fontSize = 45.sp, lineHeight = 64.sp),
          testTag = "LoginTitle")

      // App Logo Image
      Image(
          painter = painterResource(id = R.drawable.app_logo_name),
          contentDescription = "App Logo",
          modifier = Modifier.size(250.dp).testTag("AppLogo"))
      // put a spacer that takes all the remaining space
      Spacer(modifier = Modifier.weight(0.35f))
      // buttons for signing in column container
      Column(
          modifier = Modifier.fillMaxWidth().padding(24.dp),
          horizontalAlignment = Alignment.CenterHorizontally,
...
                          style =
                              SpanStyle(
                                  color = Color.Black.copy(alpha = alphaOfGuestButton.value))) {
                            append(stringResource(R.string.sign_in_guest_button))
                          }
                    },
                modifier = Modifier.testTag("AnonymousLoginButton").padding(4.dp),
                style =
                    TextStyle(
                        textDecoration = TextDecoration.Underline, fontStyle = FontStyle.Italic),
                onClick = {
                  coroutineScope.launch {
                    clickAnimation(alphaOfGuestButton)
...
                          style =
                              SpanStyle(
                                  color = Color.Black.copy(alpha = alphaOfOfflineButton.value))) {
                            append(stringResource(R.string.sign_in_offline_button))
                          }
                    },
                modifier = Modifier.testTag("OfflineModeButton").padding(4.dp),
                style =
                    TextStyle(
                        textDecoration = TextDecoration.Underline, fontStyle = FontStyle.Italic),
                onClick = {
                  coroutineScope.launch {
                    clickAnimation(alphaOfOfflineButton)
...
